# KeWoKe-learning

./: .gitignore  README.md  main.py  pyproject.toml
src/: convert.py  dataset.py  get_model_def.py  models.py  run_config.toml  test_mfcc.py  train.py  tune.py  utils.py
