[project]
name = "kewoke-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keras-tuner>=1.4.8",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "pyserial>=3.5",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
    #"tensorflow>=2.20.0",
    "tensorflow==2.19.0",
    "toml>=0.10.2",
]
